tests/neg/toplevel-doubledef/moredefs_1.scala
def hello(x: String): Unit = // error: has already been compiled
  println(s"hi, $x")